Fixed header stretching

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -17,7 +17,8 @@ header
     color: #FAFAFA;             /* Sets font color */
     background: #DB5461;        /* Background color of the header element */
     font-family: Comic Sans MS; /* Font for the text in the header */
-    padding: 2px;               /* Padding for the header div to cover top of page */        
+    padding: 2px;               /* Padding for the header div to cover top of page */ 
+    position: absolute;         /* Makes header stretch to the end of the screen */      
 }
 
 
